# strain_gauge_sim

./: .gitignore  Makefile  Manifest.toml  Project.toml  README.md  load_cell_results.vtu  main.jl  pyproject.toml  resistance.txt  viz_load_cell_results.m
CAD/: load_cell.f3d
docs/drawio/: documentation.drawio
geo/: load_cell_beam.geo  load_cell_beam.geo.opt  load_cell_beam.msh
load_cell_py/: main.py  spice_sim_conditioning_cir.py
mesh/: load_cell_beam.msh
spice/: resistance_param.inc
step/: load_cell_beam.step
